Q-0.9.0d89
[new] new icons (Andi)
[fix] CpuView adapted to new icons
[fix] new default icon set for qControl

Q-0.9.0d88
[fix] changelog update

Q-0.9.0d87
[fix] downloader: commited updated nib file now

Q-0.9.0d86
[fix] backport of qemu qcow2 fix
[fix] prepare.sh qemu cvs logout by tag instead by date

Q-0.9.0d85
[fix] localization: English (host-cocoa)
[fix] localization: German (host-cocoa)
[fix] localization: French (host-cocoa)

Q-0.9.0d84
[fix] downloader: check if freeoszoo is up, else show only kju-app guests
[new] hint for keyboard shortcuts when entering fullscreen mode
[fix] localization: German (several)
[fix] some NSLog's ;)

Q-0.9.0d83
[fix] localization: German (downloader)
[fix] downloader: show loading progress of list
[new] downloader: added Guest PCs from kju-app.org for download to the list

Q-0.9.0d82
[fix] enable log to console (cordney*)
[fix] cocoaDownload.nib adapted for German translation

Q-0.9.0d81
[fix] "#define kju_debug 1" for verbous log messages (txs Andreas F for suggestion)
[fix] added openbios-sparc32 to sparc package (txs Andreas F)
[fix] simplyfied "make install" (txs Andreas F for suggestion)

Q-0.9.0d80
[fix] tools: localizationStringsUpdate: semicolon
[fix] cocoaControl.strings
[fix] pl.lproj converted to Q localization guidelines

Q-0.9.0d79
[new] updatePC: convert Image to qcow2 and/or compress it
[new] tools: localizationStringsUpdate error checking
[new] tools: localizationStringsUpdate --help

Q-0.9.0d78
[new] tools: localizationStringsUpdate
[new] update_localization.sh scrip
[new] editPC added -smp option

Q-0.9.0d77
[fix] build_ppc.sh MACOSX_DEPLOYMENT_TARGET set to 10.3 for ppc (aka panther bug)
[fix] build_ppc.sh/build_i386.sh --target-list updated
[fix] NewPCAssistant: Live CD

Q-0.9.0d76
[fix] preferences: log output to console
[fix] Localization: nibs fixes/German

Q-0.9.0d75
[fix] Export/Import Guest PC Menu Item
[fix] Exported Guest PCs have no Dock Icon

Q-0.9.0d74
[fix] Localization: nibs 5

Q-0.9.0d73